codegen/tests/errors/not_allowed_associated_constants.rs
use delegation::delegate;

#[delegate]
trait Channel {
    const ID: usize;
}

fn main() {
    unreachable!()
}
